@@ -1,6 +1,6 @@
 AC_PREREQ([2.60])
 
-AC_INIT([globus_xio_gsi_driver],[4.0],[https://github.com/globus/globus-toolkit/issues/])
+AC_INIT([globus_xio_gsi_driver],[4.1],[https://github.com/globus/globus-toolkit/issues/])
 AC_CONFIG_MACRO_DIR([m4])
 AC_SUBST([MAJOR_VERSION], [${PACKAGE_VERSION%%.*}])
 AC_SUBST([MINOR_VERSION], [${PACKAGE_VERSION##*.}])
